Add support for categories
* Add support for views and mapping
* Add support for CRUD functionalities

--- a/spring-example-jdbc/src/main/resources/validation.properties
+++ b/spring-example-jdbc/src/main/resources/validation.properties
@@ -7,3 +7,5 @@ com.company.dto.registerDto.termsCheck.assertTrueConstraint.message = You must a
 
 com.company.dto.passwordDto.password.sizeConstraint.message = Password must be between {min} - {max}
 com.company.dto.passwordDto.confirmedPassword.sizeConstraint.message = Confirmed password must be between {min} - {max}
+
+com.company.dto.categoryDto.name.sizeConstraint.message =  Name must be between {min} - {max}
