--- a/spring-example-jdbc/pom.xml
+++ b/spring-example-jdbc/pom.xml
@@ -108,6 +108,13 @@
       <scope>provided</scope>
     </dependency>
 
+    <!-- Used for @PostConstruct / @PreDestroy annotations -->
+    <dependency>
+      <groupId>javax.annotation</groupId>
+      <artifactId>javax.annotation-api</artifactId>
+      <version>1.3.2</version>
+    </dependency>
+
 
   </dependencies>
 
