Add support for the user profile
* Add support for view, mapping, and CRUD functionalities

--- a/spring-example-jdbc/src/main/resources/validation.properties
+++ b/spring-example-jdbc/src/main/resources/validation.properties
@@ -1,5 +1,6 @@
 com.company.validations.validPasswordConstraint.message = Passwords must match and length must be between {minLength} - {maxLength}
 com.company.validations.uniqueAccountConstraint.message = This email already exists
+com.company.validations.validEmployeeAdditionConstraint.message = Only admin can add new employees and this must be checked only if you are an admin and you are performing an employee addition
 
 com.company.dto.registerDto.email.sizeConstraint.message = Email must be between {min} - {max}.
 com.company.dto.registerDto.email.emailConstraint.message = Email must end with @yahoo.com or @gmail.com and accepted special symbols are -_.
@@ -9,3 +10,5 @@ com.company.dto.passwordDto.password.sizeConstraint.message = Password must be b
 com.company.dto.passwordDto.confirmedPassword.sizeConstraint.message = Confirmed password must be between {min} - {max}
 
 com.company.dto.categoryDto.name.sizeConstraint.message =  Name must be between {min} - {max}
+
+com.company.dto.changePasswordDto.passwordDto.validPasswordConstraint.message =  New password and confirmed password must matched and length must be between {minLength} - {maxLength}
