Add support for order-product functionality
* Add support for views, mappings, and CRUD functionalities for products, cart and orders.

--- a/spring-example-jdbc/src/main/resources/validation.properties
+++ b/spring-example-jdbc/src/main/resources/validation.properties
@@ -12,3 +12,18 @@ com.company.dto.passwordDto.confirmedPassword.sizeConstraint.message = Confirmed
 com.company.dto.categoryDto.name.sizeConstraint.message =  Name must be between {min} - {max}
 
 com.company.dto.changePasswordDto.passwordDto.validPasswordConstraint.message =  New password and confirmed password must matched and length must be between {minLength} - {maxLength}
+
+com.company.dto.productDto.price.decimalMinConstraint.message = Price must be >= {value}
+com.company.dto.productDto.price.decimalMaxConstraint.message = Price must be <= {value}
+com.company.dto.productDto.price.digitsConstraint.message = Format is invalid (must be a number with format ####.##)
+typeMismatch.productDto.price = Price is invalid (must be a number)
+com.company.dto.productDto.stock.minConstraint.message = Stock can not be < {value}
+com.company.dto.productDto.stock.maxConstraint.message = Stock can not be > {value}
+com.company.dto.productDto.stock.digitsConstraint.message = Format is invalid (must be an integer number)
+typeMismatch.productDto.stock = Stock value is invalid (must be an integer number)
+com.company.dto.productDto.categoriesIds.notEmptyConstraint.message = No category was selected
+com.company.dto.productDto.name.sizeConstraint.message = Name must be between {min} - {max}
+com.company.dto.productDto.description.sizeConstraint.message = Description must be between {min} - {max}
+
+com.company.dto.orderDetailsDto.fullName.sizeConstraint.message = Full name must be between {min} - {max}
+com.company.dto.orderDetailsDto.fullAddress.sizeConstraint.message = Address must be between {min} - {max}
