--- a/spring-example-jdbc/pom.xml
+++ b/spring-example-jdbc/pom.xml
@@ -115,6 +115,19 @@
       <version>1.3.2</version>
     </dependency>
 
+    <!-- Used for upload file image -->
+    <dependency>
+      <groupId>commons-fileupload</groupId>
+      <artifactId>commons-fileupload</artifactId>
+      <version>1.4</version>
+    </dependency>
+
+    <!-- https://github.com/google/gson -->
+    <dependency>
+      <groupId>com.google.code.gson</groupId>
+      <artifactId>gson</artifactId>
+      <version>2.8.9</version>
+    </dependency>
 
   </dependencies>
 
