--- a/install/Dockerfile
+++ b/install/Dockerfile
@@ -1,4 +1,4 @@
 FROM tomcat:9.0
-COPY ./app/spring-example.war /usr/local/tomcat/webapps/ROOT.war
+COPY ./app/spring-mvc-hibernate.war /usr/local/tomcat/webapps/ROOT.war
 CMD ["catalina.sh", "run"]
 EXPOSE 8080
