--- a/install/app-compose.yaml
+++ b/install/app-compose.yaml
@@ -2,17 +2,17 @@ version: '3.1'
 
 services:
 
-  spring-mvc-demo-app:
+  spring-mvc-hibernate-demo-app:
     build:
       context: .
       dockerfile: Dockerfile
-    image: spring-mvc-app:1.0
+    image: spring-mvc-hibernate-app:1.0
     ports:
       - 8888:8080
     depends_on:
-      - spring-mvc-demo-mysql
+      - spring-mvc-hibernate-demo-mysql
 
-  spring-mvc-demo-mysql:
+  spring-mvc-hibernate-demo-mysql:
     image: mysql:8.0
     volumes:
       - ./db-init/db-demo-init.sql:/docker-entrypoint-initdb.d/db-demo-init.sql
