Replace JDBC Authentication with Hibernate Authentication
* In order to replace JDBC Authentication, a custom basic
  HibernateUserDetailsManger was added.
* Update specific user models and add a model for authorities.
* Update specific repositories in order to work with Hibernate.
* Add other general changes in order to support previous updates.

--- a/spring-mvc-hibernate/src/main/resources/connectivity.properties
+++ b/spring-mvc-hibernate/src/main/resources/connectivity.properties
@@ -2,3 +2,10 @@ dataSource.url = jdbc:mysql://localhost:3306/example_spring_mvc_hibernate
 dataSource.username = spring-user
 dataSource.password = 123456
 dataSource.driver = com.mysql.cj.jdbc.Driver
+
+hibernate.dialect = org.hibernate.dialect.MySQL8Dialect
+hibernate.hbm2ddl.auto = update
+
+# for debug purpose
+hibernate.show_sql = true
+hibernate.format_sql = true
